# jimspuzzle

./: README.md  setup.cfg
src/jimspuzzle/: __init__.py  __main__.py
tests/: jimspuzzle_tests.py
