[metadata]
name = jimspuzzle
version = file: VERSION
description = An attempt at Jim's knight puzzle, and an attempt at a project layout.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package-dir = 
    =src
include_package_data = True
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    knights = jimspuzzle:main
